* README, doc/ecl.conf, src/mod_ecl.c,  src/mod_ecl.h: Introducing doxygen   for documentation.  Adding proper comments.   Small changes to the code.   And other changes.

--- a/doc/ecl.conf
+++ b/doc/ecl.conf
@@ -1,5 +1,44 @@
-<IfModule mod_ecl.c>
-    <Location /mod_ecl>
-        SetHandler ecl
-    </Location>
-</IfModule>
+# Maps     the     filename     extension    .ecl     onto     the
+# application/x-httpd-ecl MIME type.
+#
+# If the filename contains  multiple extensions like .ecl.png this
+# will map the file name extension .ecl and the filename extension
+# .png onto the application/x-httpd-ecl MIME type.  This can raise
+# a security problem.
+#
+# AddType application/x-httpd-ecl .ecl
+
+# Maps the filename extension .ecl onto the ecl-handler handler of
+# the mod_ecl module.
+#
+# AddHandler ecl-handler .ecl
+
+# Forces  all  matching   .ecl  files  to  be   processed  by  the
+# ecl-handler handler of the mod_ecl module.
+#
+# SetHandler application/x-httpd-ecl
+#
+# To match all files in the  /mod_ecl/ directory put this inside a
+# .htaccess file or put this  in the httpd.conf configuration file
+# in a Location or Directory directive.
+#
+# <Location /mod_ecl>
+#     SetHandler application/x-httpd-ecl
+# <Location>
+#
+# To match  files with filemane  extension .ecl put this  inside a
+# FilesMatch directive. This is recommended.
+#
+# <FilesMatch ".+\.ecl$">
+#     SetHandler application/x-httpd-ecl
+# <FilesMatch>
+
+<FilesMatch ".+\.ecl$">
+    SetHandler application/x-httpd-ecl
+</FilesMatch>
+
+# Deny access to files without filename (e.g. '.ecl')
+
+<FilesMatch "^\.ecl$">
+    Require all denied
+</FilesMatch>
