src/Makefile: add compiler flags for ecl

--- a/src/Makefile
+++ b/src/Makefile
@@ -42,6 +42,7 @@ CAT=cat
 #DEFS=-Dmy_define=my_value
 #INCLUDES=-Imy/include/dir
 #LIBS=-Lmy/lib/dir -lmylib
+CFLAGS=-lecl
 
 #   the default target
 all: local-shared-build
