--- a/doc/ecl.conf
+++ b/doc/ecl.conf
@@ -1,33 +1,55 @@
-# Maps     the     filename     extension    .ecl     onto     the
-# application/x-httpd-ecl MIME type.
+## This file is part of RaSt mod_ecl.
+##
+## RaSt mod_ecl is  an extension module for the Apache  HTTP Server.  It enables
+## the Apache HTTP  Server to run scripts written in  the Embeddable Common-Lisp
+## language.
+##
+## Copyright (C) 2021 Ralf Stephan (RaSt) <me@ralf-stephan.name>
+##
+## RaSt mod_ecl is free software: you can redistribute it and/or modify it under
+## the terms of the GNU General Public License as published by the Free Software
+## Foundation, either  version 3 of the  License, or (at your  option) any later
+## version.
+##
+## RaSt mod_ecl is distributed  in the hope that it will  be useful, but WITHOUT
+## ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS
+## FOR  A PARTICULAR  PURPOSE.   See the  GNU General  Public  License for  more
+## details.
+##
+## You should have received a copy of  the GNU General Public License along with
+## this     program     in     the     file    COPYING.      If     not,     see
+## <https://www.gnu.org/licenses/>.
+
+
+
+# Maps the filename extension .ecl onto the application/x-httpd-ecl MIME type.
 #
-# If the filename contains  multiple extensions like .ecl.png this
-# will map the file name extension .ecl and the filename extension
-# .png onto the application/x-httpd-ecl MIME type.  This can raise
-# a security problem.
+# If the filename  contains multiple extensions like .ecl.png this  will map the
+# file  name   extension  .ecl  and   the  filename  extension  .png   onto  the
+# application/x-httpd-ecl MIME type.  This can raise a security problem.
 #
 # AddType application/x-httpd-ecl .ecl
 
-# Maps the filename extension .ecl onto the ecl-handler handler of
-# the mod_ecl module.
+# Maps the filename  extension .ecl onto the ecl-handler handler  of the mod_ecl
+# module.
 #
 # AddHandler ecl-handler .ecl
 
-# Forces  all  matching   .ecl  files  to  be   processed  by  the
-# ecl-handler handler of the mod_ecl module.
+# Forces all matching  .ecl files to be processed by  the ecl-handler handler of
+# the mod_ecl module.
 #
 # SetHandler application/x-httpd-ecl
 #
-# To match all files in the  /mod_ecl/ directory put this inside a
-# .htaccess file or put this  in the httpd.conf configuration file
-# in a Location or Directory directive.
+# To match all files in the /mod_ecl/ directory put this inside a .htaccess file
+# or put  this in the httpd.conf  configuration file in a  Location or Directory
+# directive.
 #
 # <Location /mod_ecl>
 #     SetHandler application/x-httpd-ecl
 # <Location>
 #
-# To match  files with filemane  extension .ecl put this  inside a
-# FilesMatch directive. This is recommended.
+# To  match files  with filemane  extension .ecl  put this  inside a  FilesMatch
+# directive. This is recommended.
 #
 # <FilesMatch ".+\.ecl$">
 #     SetHandler application/x-httpd-ecl
